--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -5,17 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>To-Do Lists</title>
-    <link href="../static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/base.css">
   </head>
   <body>
     <div class="container">
 
       <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-6 col-md-offset-3 jumbotron">
           <div class="text-center">
             <h1>{% block header_text %}{% endblock %}</h1>
             <form method="POST" action="{% block form_action %}{% endblock %}">
-              <input id="id_new_item" placeholder="Enter a to-do item" name="item_text"/>
+              <input name="item_text" id="id_new_item" 
+                    class="form-control input-lg"
+                    placeholder="Enter a to-do item" />
               {% csrf_token %}
             </form>
           </div>
